--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <div class="col-lg-5">
         <h1 class="font-weight-light">Business Name or Tagline</h1>
         <p class="firstDesc">This is a template that is great for small businesses. It doesn't have too much fancy flare to it, but it makes a great use of the standard Bootstrap core components. Feel free to use this template for any project you want!</p>
-        <a class="btn btn-primary" href="#">Call to Action!</a>
+        <a class="btn btn-primary" href="#">Acessar</a>
       </div>
       <!-- /.col-md-4 -->
     </div>
@@ -70,7 +70,7 @@
     <!-- Call to Action Well -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">This call to action card is a great place to showcase some important information or display a clever tagline!</p>
+        <p class="text-white m-0">Confira as principais notícias sobre hacking do dia! </p>
       </div>
     </div>
 
@@ -79,12 +79,13 @@
       <div class="col-md-4 mb-5">
         <div class="card h-100">
           <div class="card-body">
+            <img class="card-image" src="">
             <h2 class="card-title">Card One</h2>
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
             <h7 id="newsDate">AAAAAAA</h7>
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -93,11 +94,12 @@
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Card Two</h2>
+            <img class="card-image" src="">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
           </div>
           <div class="card-footer">
             <h7 id="newsDate">AAAAAAA</h7>
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -106,11 +108,12 @@
         <div class="card h-100">
           <div class="card-body">
             <h2 class="card-title">Card Three</h2>
+            <img class="card-image" src="">
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
             <h7 id="newsDate">AAAAAAA</h7>
-            <a href="#" class="btn btn-primary btn-sm">More Info</a>
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -119,11 +122,12 @@
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title">Card Four</h2>
+              <img class="card-image" src="">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
               <h7 id="newsDate">AAAAAAA</h7>
-              <a href="#" class="btn btn-primary btn-sm">More Info</a>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -132,11 +136,12 @@
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title">Card Five</h2>
+              <img class="card-image" src="">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
             </div>
             <div class="card-footer">
               <h7 id="newsDate">AAAAAAA</h7>
-              <a href="#" class="btn btn-primary btn-sm">More Info</a>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -145,11 +150,12 @@
           <div class="card h-100">
             <div class="card-body">
               <h2 class="card-title">Card Six</h2>
+              <img class="card-image" src="">
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
               <h7 id="newsDate">AAAAAAA</h7>
-              <a href="#" class="btn btn-primary btn-sm">More Info</a>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
