--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Custom styles for this template -->
   <link href="css/small-business.css" rel="stylesheet">
 
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
+
 </head>
 
 <body background="img/background.jpg">
