Mudando UMA palavra

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <!-- Call to Action Well -->
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
-        <p class="text-white m-0">Confira as principais notícias sobre hacking do dia! </p>
+        <p class="text-white m-0">Confira as principais notícias internacionais sobre hacking do dia! </p>
       </div>
     </div>
 
