--- a/index.html
+++ b/index.html
@@ -163,6 +163,49 @@
         </div>
       <!-- /.col-md-4 -->
 
+      <div class="col-md-4 mb-5">
+          <div class="card h-100">
+            <div class="card-body">
+              <h2 class="card-title">Card Seven</h2>
+              <img class="card-image" src="">
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+            </div>
+            <div class="card-footer">
+              <h7 id="newsDate">AAAAAAA</h7>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-md-4 -->
+        <div class="col-md-4 mb-5">
+          <div class="card h-100">
+            <div class="card-body">
+              <h2 class="card-title">Card Eight</h2>
+              <img class="card-image" src="">
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
+            </div>
+            <div class="card-footer">
+              <h7 id="newsDate">AAAAAAA</h7>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
+            </div>
+          </div>
+        </div>
+        <!-- /.col-md-4 -->
+        <div class="col-md-4 mb-5">
+          <div class="card h-100">
+            <div class="card-body">
+              <h2 class="card-title">Card Nine</h2>
+              <img class="card-image" src="">
+              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
+            </div>
+            <div class="card-footer">
+              <h7 id="newsDate">AAAAAAA</h7>
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
+            </div>
+          </div>
+        </div>
+      <!-- /.col-md-4 -->
+
  
 
   </div>
