Mudando um pouco do layout [ainda ta uma porra]

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             <h7 id="newsDate">AAAAAAA</h7>
             <h8 id="newsSource">BBBBB</h8>
-            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -101,9 +101,9 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
           </div>
           <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             <h7 id="newsDate">AAAAAAA</h7>
             <h8 id="newsSource">BBBBB</h8>
-            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -116,9 +116,9 @@
             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
           </div>
           <div class="card-footer">
+            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             <h7 id="newsDate">AAAAAAA</h7>
             <h8 id="newsSource">BBBBB</h8>
-            <a href="#" class="btn btn-primary btn-sm">Acessar</a>
           </div>
         </div>
       </div>
@@ -131,9 +131,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -146,9 +146,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
             </div>
             <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -161,9 +161,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -177,9 +177,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
+                <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -192,9 +192,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod tenetur ex natus at dolorem enim! Nesciunt pariatur voluptatem sunt quam eaque, vel, non in id dolore voluptates quos eligendi labore.</p>
             </div>
             <div class="card-footer">
+                <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -207,9 +207,9 @@
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem magni quas ex numquam, maxime minus quam molestias corporis quod, ea minima accusamus.</p>
             </div>
             <div class="card-footer">
+              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
               <h7 id="newsDate">AAAAAAA</h7>
               <h8 id="newsSource">BBBBB</h8>
-              <a href="#" class="btn btn-primary btn-sm">Acessar</a>
             </div>
           </div>
         </div>
@@ -223,7 +223,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; Schimidt 2019</p>
     </div>
     <!-- /.container -->
   </footer>
