--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Small Security</title>
+  <title>InfoLeaks</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
@@ -37,7 +37,7 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
+          <!--<li class="nav-item">
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
@@ -45,7 +45,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
-          </li>
+          </li>-->
         </ul>
       </div>
     </div>
@@ -73,6 +73,12 @@
     <div class="card text-white bg-secondary my-5 py-4 text-center">
       <div class="card-body">
         <p class="text-white m-0">Confira as principais notícias internacionais sobre hacking do dia! </p>
+      </div>
+    </div>
+
+    <div class="card text-white bg-secondary my-5 py-4 text-center">
+      <div class="card-body">
+        <p class="text-white m-0">Além disso, <a href="http://haveibeenpwned.com" target="_blank">clique aqui</a> para ver se seu email foi comprometido. </p>
       </div>
     </div>
 
@@ -223,7 +229,7 @@
   <!-- Footer -->
   <footer class="py-5 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white">Copyright &copy; Schimidt 2019</p>
+      <p class="m-0 text-center text-white">Copyright &copy; InfoLeaks 2019</p>
     </div>
     <!-- /.container -->
   </footer>
